
// Copyright 2018 gRPC authors.

syntax = "proto3";

package grpc.testing;

message SimpleRequest {}

message SimpleResponse {}

message StringValue {
  string message = 1;
}
